# python-flex-cache

./: README.md  setup.cfg  setup.py
flex_cache/: __init__.py  basecache.py  diskcache.py  memcache.py  nocache.py  rediscache.py
tests/: test_disk_cache.py  test_memory_cache.py  test_no_cache.py  test_redis_cache.py
