[aliases]
test=pytest

[tool:pytest]
addopts = -s -v

[metadata]
author_email = ssch@wheel.dk
keywords = redis cache python memory disk
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
